HSeq 
----------

+ Split the system into a library and toplevel part.
  Library named hseq.
  Toplevel made up of tpquote.cma (the quotation expander),
  and hseqtop.cma (the interface to the OCaml toplevel).

+ Added induction tactics induct_tac and induct_on
	
	
HSeq Mar06
----------
	
Initial Release