@@ -57,7 +57,6 @@ let run silent bin args file =
   in 
   let command = use_command ~silent:silent file
   in 
-    Format.printf "@[run %s on file %s@]@." bin file;
     output_string outstrm command;
     flush outstrm;
     ignore(Unix.waitpid [Unix.WUNTRACED] pid)
